--- a/song/steal-a-brainrot(secrets)/index.html
+++ b/song/steal-a-brainrot(secrets)/index.html
@@ -1,1 +1,16 @@
-<h1>Steal a Brainrot (Secrets)<h1>
+<html>
+
+  <style>
+    figure {
+      margin: 0;
+    }
+
+  </style>
+  
+  <h1>Steal a Brainrot (Secrets)<h1>
+  <figure>
+  <figcaption>Author: Winnigames2024</figcaption>
+  <audio controls src="./Steal a Brainrot (Secrets).mp3"></audio>
+  <a href="./Steal a Brainrot (Secrets).mp3"> Download audio </a>
+  </figure>
+</html>
