--- a/song/steal-a-brainrot(secrets)/index.html
+++ b/song/steal-a-brainrot(secrets)/index.html
@@ -1,16 +1,25 @@
+<!DOCTYPE html>
 <html>
-
-  <style>
-    figure {
-      margin: 0;
-    }
-
-  </style>
-  
-  <h1>Steal a Brainrot (Secrets)<h1>
-  <figure>
-  <figcaption>Author: Winnigames2024</figcaption>
-  <audio controls src="./Steal a Brainrot (Secrets).mp3"></audio>
-  <a href="./Steal a Brainrot (Secrets).mp3"> Download audio </a>
-  </figure>
+<head>
+    <title>Mp3Free -- Steal a Brainrot (Secrets)</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="audio-player">
+        <audio id="audio" controls>
+            <source src="./Steal a Brainrot (Secrets).mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+        <div class="controls">
+            <button id="play-pause-button">Play</button>
+            <input type="range" id="volume-control" min="0" max="1" step="0.01" value="1">
+        </div>
+        <div class="progress">
+            <div class="progress-bar" id="progress-bar"></div>
+        </div>
+        <div id="current-time">0:00</div>
+        <div id="total-time">0:00</div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
